packages/reporting/src/components/TrendBadge/TrendBadge.less
@import '~@gorgias/design-tokens/dist/css/typographyTokens.less';

:local {
    .trend {
        border-radius: 100px;
        display: inline-flex;
        align-items: center;
        font-size: @caption-all-caps-font-size;
        font-weight: @caption-all-caps-font-weight;
        letter-spacing: @caption-all-caps-letter-spacing;
        line-height: @caption-all-caps-line-height;
        gap: var(--spacing-xxxxs);
        cursor: pointer;
    }

    .color-unchanged {
        color: var(--content-neutral-secondary);
    }

    .color-neutral {
        color: var(--content-neutral-strong);
    }

    .color-positive {
        color: var(--content-success-primary);
    }

    .color-negative {
        color: var(--static-error);
    }

    .size-sm {
        height: 18px;
    }

    .size-md {
        height: 24px;
    }

    .withTooltip {
        cursor: pointer;
    }
}

